--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -187,7 +187,7 @@ canvas {
 .ocean {
   width: 100%;
   position: absolute;
-  bottom: -80;
+  /* bottom: -80; */
   left: 0;
   background: #dfdfdf;
   filter: grayscale();
@@ -364,4 +364,9 @@ canvas {
   .ag-courses-item_date-box {
     font-size: 16px;
   }
+}
+
+line {
+  stroke: #3f51b5;
+  stroke-width: 2;
 }
