--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,9 +75,9 @@
   }
 }
 
-a{
+#notes-editor a {
   text-decoration: underline;
-  color:mediumblue;
+  color: rgb(103, 103, 255);
   cursor: pointer;
 }
 
@@ -104,32 +104,37 @@ a{
     }
   }
 
-  ::selection { background: #d3d3d3bf; }
+  ::selection {
+    background: #d3d3d3bf;
+  }
 }
 
 body h1 {
-	color: #fff;
-	font-family: "Protest Riot", sans-serif;
-	font-size: 60px;
+  color: #fff;
+  font-family: "Protest Riot", sans-serif;
+  font-size: 60px;
 }
+
 .cursorGlow {
-	position: absolute;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background-color: deepskyblue;
-	mix-blend-mode: difference;
-	pointer-events: none;
-	transform: translate(-50%, -50%);
-	transition: width 0.3s, height 0.3s, background-color 0.3s;
-	animation: glow 1s infinite alternate;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: deepskyblue;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: width 0.3s, height 0.3s, background-color 0.3s;
+  animation: glow 1s infinite alternate;
   z-index: 100;
 }
+
 @keyframes glow {
-	0% {
-		box-shadow: 0 0 10px 5px rgba(0, 191, 255, 0.5);
-	}
-	100% {
-		box-shadow: 0 0 20px 10px rgba(0, 191, 255, 0.9);
-	}
+  0% {
+    box-shadow: 0 0 10px 5px rgba(0, 191, 255, 0.5);
+  }
+
+  100% {
+    box-shadow: 0 0 20px 10px rgba(0, 191, 255, 0.9);
+  }
 }
